test.yml
---
# Source: edischart/charts/mdcore/templates/services-template.yml
apiVersion: v1
kind: Service
metadata:
  name: "md-core"
spec:
  ports:
    - name: "8008"
      port: 8008
      targetPort: 8008
  type: LoadBalancer
  sessionAffinity: None
  selector:
      app: "md-core"
status:
  loadBalancer: {}
---
# Source: edischart/charts/mdcore/templates/services-template.yml
apiVersion: v1
kind: Service
metadata:
  name: "postgres-core"
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
      app: "postgres-core"
status:
  loadBalancer: {}
---
# Source: edischart/charts/mdcore/templates/deployments-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "md-core"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "md-core"
  strategy:
    rollingUpdate:
      maxSurge: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "md-core"
        aws-type: fargate
        name: md-core
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: mdcore-env
            - configMapRef:
                name: release-name-config
          image: "opswat/metadefendercore-debian:5.14.2"
          imagePullPolicy: IfNotPresent
          name: "md-core"
          ports:
            - containerPort: 8008
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 8008
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8008
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 10Gi
              memory: 1Gi
            requests:
              cpu: 250m
              ephemeral-storage: 5Gi
              memory: 512Mi
      restartPolicy: Always
---
# Source: edischart/charts/mdcore/templates/deployments-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "postgres-core"
spec:
  replicas: 
  selector:
    matchLabels:
      app: "postgres-core"
  template:
    metadata:
      labels:
        app: "postgres-core"
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: mdcore-env
            - configMapRef:
                name: release-name-config
          image: "postgres:14.8"
          imagePullPolicy: IfNotPresent
          name: "postgres-core"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-core
              mountPath: /var/lib/postgresql/data
              subPath: postgres-core
            
      restartPolicy: Always
      volumes:
        - name: postgres-core
          persistentVolumeClaim:
            claimName: md-core-store-data-pvc
---
# Source: edischart/charts/mdcore/templates/deployments-template.yml
# Create a deployment for each component in MD Core if it's enabled
---
# Source: edischart/charts/mdcore/templates/hpa-template.yml
# Create an hpa for the md core deployment
---
# Source: edischart/charts/mdcore/templates/services-template.yml
# Create a service for each component in MD Core it has exposed ports
